# pytorch-study

./: .gitignore  README.md  benchmark.py  cli.mjs  config.py  dataset.py  export_jsonl.py  export_onnx.py  inference.py  model.py  package.json  pyproject.toml  server.mjs  tokenizer.py  train.py
reports/: benchmark_report.html  benchmark_report.json
