[project]
name = "pytorch-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.4.2",
    "matplotlib>=3.10.0",
    "netron>=8.7.9",
    "onnx>=1.20.0",
    "onnxscript>=0.5.7",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]
